# my_ws

./: README.md
Birds-eye-view-Perception/Birds-eye-view-Perception-master/nuScenes_playground/VCD/tools/: visual_fig1_occ.py
Birds-eye-view-Perception/Birds-eye-view-Perception-master/waymo_playground/projects/configs/bevformer/: waymo_mini_r101_baseline.py
Birds-eye-view-Perception/Birds-eye-view-Perception-master/waymo_playground/projects/mmdet3d_plugin/datasets/: HDmap.py  bbox_mask.py  dasetset_wrappers.py  eval_waymo.py  iou_3d.py  lidar_waymo.py  lyft_dataset.py  nuscenes_mono_dataset.py  raw_nuscene_dataset.py  waymo2d.py
Birds-eye-view-Perception/Birds-eye-view-Perception-master/waymo_playground/tools/analysis_tools/: analyze_results.py  create_video.py  nms.py  visual.py  visual_lyft.py  visual_mask.py  visual_mask_gt.py  visual_raw.py  visual_waymo.py
Birds-eye-view-Perception/Birds-eye-view-Perception-master/waymo_playground/tools/data_converter/: mv_waymo_converter.py
calibration_new/calibration_new/calib_data/config/: calib_board_config.yaml
calibration_new/calibration_new/calib_data/config/extrinsic_parameters/: 1.txt  2.txt  lidar_from_map.yaml  sensor_kit_calibration.yaml  sensors_calibration.yaml
calibration_new/calibration_new/calib_data/config/intrinsic_parameters/: camera0_params.yaml  camera1_params.yaml  camera2_params.yaml  camera3_params.yaml  camera4_params.yaml  camera5.yaml  camera5_params.yaml  camera6.yaml  camera6_params.yaml  camera7_params.yaml  camera_top_6mm.yaml  encoder_params.yaml  imu_corrector.param.yaml
calibration_new/calibration_new/calib_data/script/: arcou.py  sub_tf2.py  undistort_2k.py  undistort_4k.py  update_pix_params.py
calibration_new/calibration_new/ws/install/: local_setup.sh  setup.sh
calibration_new/calibration_new/ws/install/calib_board/lib/: libfmt.so.12
calibration_new/calibration_new/ws/install/fast_lio/: readme.md
calibration_new/calibration_new/ws/install/manual_calib/share/manual_calib/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
calibration_new/calibration_new/ws/install/manual_calib/share/manual_calib/cmake/: manual_calibConfig.cmake
calibration_new/calibration_new/ws/install/manual_calib/share/manual_calib/config/: config.yaml  rviz_config.rviz
calibration_new/calibration_new/ws/install/manual_calib/share/manual_calib/config/extrinsic_parameters/: 1.txt  lidar_from_map.yaml  sensor_kit_calibration.yaml  sensors_calibration.yaml
calibration_new/calibration_new/ws/install/manual_calib/share/manual_calib/config/intrinsic_parameters/: camera1.yaml  camera1_params.yaml  camera2_params.yaml  camera3_params.yaml  camera4.yaml  camera4_params.yaml  camera5_params.yaml  camera6_params.yaml  camera_fr_3mm.yaml
calibration_new/calibration_new/ws/install/manual_calib/share/manual_calib/include/: base_struct.h  calibrate.h  manual_calib_node.h
calibration_new/calibration_new/ws/install/manual_calib/share/manual_calib/launch/: manual_calib_launch.py
camera_to_lidar_autoCalib/camera_to_lidar_autoCalib-main/: CMakeLists.txt  README.md
camera_to_lidar_autoCalib/camera_to_lidar_autoCalib-main/config/: calib_board_config.yaml
camera_to_lidar_autoCalib/camera_to_lidar_autoCalib-main/config/extrinsic_parameters/: lidar_from_map.yaml  sensor_kit_calibration.yaml
camera_to_lidar_autoCalib/camera_to_lidar_autoCalib-main/config/intrinsic_parameters/: camera0.yaml  camera1_params.yaml  camera2.yaml  camera3_params.yaml  camera5_params.yaml  camera6_params.yaml  camera_fl_3mm.yaml  imu_corrector.param.yaml
camera_to_lidar_autoCalib/camera_to_lidar_autoCalib-main/include/: base_struct.h  calibrate.h  cornersmatch.h  detaruco.h  extraboard.h  rclcomm.h  spd_log.h
camera_to_lidar_autoCalib/camera_to_lidar_autoCalib-main/script/: concate_points.py  extrat_first_frame.py  project_pcd_to_image.py  project_points_to_image.py  pub_tf2.py  show_camera.py  update_pix_params.py
camera_to_lidar_autoCalib/camera_to_lidar_autoCalib-main/src/: calibrate.cpp  cornersmatch.cpp  detaruco.cpp  extraboard.cpp  main.cpp  rclcomm.cpp
(+77 files in other folders)
